Changed the style a bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="http://github.com/ElladanTasartir/Studies/tree/master/Doom%20Calculator"><img src="https://fontmeme.com/permalink/200402/d5b11984182fed2d0f674130443ba81c.png"></a>
+        <a href="http://github.com/ElladanTasartir/Studies/"><img src="https://fontmeme.com/permalink/200402/d5b11984182fed2d0f674130443ba81c.png"></a>
     </header>
     <div id="topo"></div>
     <div id="marge">
