Tested some stuff, won't get into details

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             </table>
         </div>
     </div>
-    <div id="imagens">
-    </div>
+    <div id="imagens"></div>
     <div id="musica">
         <audio autoplay controls>
             <source src="doom.mp3">
